--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -19,9 +19,16 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 72px;
+  justify-content: flex-start;
+  height: 100px;
+  flex-wrap: wrap;
 }
+
+.Track-information img{
+  height: 50px;
+  width: 70px;
+}
+
 
 .Track-information h3 {
   margin-bottom: .22rem;
